[workspace]

members = [
    # Binaries
    "mercator_service",

    # Specific to mercator
    "mercator_parser",
    "mercator_db",

    # Generic Interfaces
    "ironsea_index",
    "ironsea_store",
    "ironsea_table",

    # Specific implementations
    "ironsea_index_hashmap",
    "ironsea_index_sfc_dbc",
    "ironsea_store_buffered_file",
    "ironsea_store_file",
    "ironsea_store_mapped_file",
    "ironsea_table_vector",
]

[profile.release]
lto = true

[patch.crates-io]
mercator_db = { path = "mercator_db" }
mercator_parser = { path = "mercator_parser" }

ironsea_index = { path = "ironsea_index" }
ironsea_store = { path = "ironsea_store" }
ironsea_table = { path = "ironsea_table" }

ironsea_index_hashmap = { path = "ironsea_index_hashmap" }
ironsea_index_sfc_dbc = { path = "ironsea_index_sfc_dbc" }
ironsea_store_buffered_file = { path = "ironsea_store_buffered_file" }
ironsea_store_file = { path = "ironsea_store_file" }
ironsea_store_mapped_file = { path = "ironsea_store_mapped_file" }
ironsea_table_vector = { path = "ironsea_table_vector" }
